Authenticated CRUD working with OAuth2